--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 export interface Props {
 	title: string;
 	description: string;
@@ -18,7 +20,9 @@ const { title, description } = Astro.props;
 		<meta name="description" content={description} />
 	</head>
 	<body>
+		<Header/>
 		<slot />
+		<Footer/>
 	</body>
 </html>
 <style is:global>
