--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Inicio" description='Pagina de instrumentos musicales'>
-	<main>
-		<h1>Inicio</h1>
+	<main class="contenedor">
+		<h1 class="heading">Inicio</h1>
 	</main>
 </Layout>
 
