--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,12 +44,17 @@
 .navegacion a,
 .copyright {
     color: var(--white);
-    font-size: 2.2rem;
+    font-size: 1.5rem;
     text-decoration: none;
     font-weight: 700;
+    transition: .3s ease-in-out all;
+}
+.navegacion a:hover {
+    color: var(--primary);
 }
 .copyright {
     text-align: center;
-    font-size: 1.4rem;
+    
+
 }
 </style>
