--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,9 @@
 ---
 import logo from '../img/logo.svg'
+
+
+const pathname = Astro.url.pathname;
+console.log()
 ---
 
 <header class="header">
@@ -9,11 +13,11 @@ import logo from '../img/logo.svg'
         </a>
 
         <nav class="navegacion">
-            <a href="/">Inicio</a>
-            <a href="/nosotros">Nosotros</a>
-            <a href="/tienda">Tienda</a>
-            <a href="/blog">Blog</a>
-            <a href="/carrito">Carrito</a>
+            <a href="/" class={pathname === '/' ? 'active' : '' }>Inicio</a>
+            <a href="/nosotros" class={pathname === '/nosotros' ? 'active' : '' }>Nosotros</a>
+            <a href="/tienda" class={pathname === '/tienda' ? 'active' : '' }>Tienda</a>
+            <a href="/blog" class={pathname === '/blog' ? 'active' : '' }>Blog</a>
+            <a href="/carrito" class={pathname === '/carrito' ? 'active' : '' }>Carrito</a>
         </nav>
     </div>
 
@@ -60,8 +64,7 @@ import logo from '../img/logo.svg'
     font-weight: 700;
     text-transform: uppercase;
     padding: .5rem;
-    transition-property: background-color;
-    transition-duration: 300ms;
+    transition: .3s ease-in-out all; 
     border-radius: 16px;
 }
 .navegacion a:hover,
