--- a/src/components/Guitarra.astro
+++ b/src/components/Guitarra.astro
@@ -69,9 +69,12 @@ const { nombre, descripcion, url, precio, imagen } = Astro.props;
     font-weight: 700;
     transition-property: background-color;
     transition-duration: 300ms;
+    border-radius: 16px;
+
 }
 .enlace:hover {
     background-color: var(--primary);
+    color: var(--black);
 }
 
 .formulario {
