--- a/src/pages/guitarras/[id].astro
+++ b/src/pages/guitarras/[id].astro
@@ -15,12 +15,99 @@ export async function getStaticPaths(){
     }))
 }
 
-console.log(Astro.params)
-console.log(Astro.props)
+// console.log(Astro.params)
+// console.log(Astro.props)
+
+const {nombre, imagen, descripcion, precio} = Astro.props.guitarra
 ---
 
-<Layout title="TIenda virtual" description="Tienda de instrumentos online, guitarras, cursos, blog y más">
+<Layout title={nombre} description="Tienda de instrumentos online, guitarras, cursos, blog y más">
     <main class="guitarra">
-        <h1>Rounting dinamico</h1>
+        <img src={imagen.data.attributes.url} alt={`Imagen guitarra ${nombre}`}/>
+
+        <div class="contenido">
+            <h3>{nombre}</h3>
+            <p class="descripcion">{descripcion}</p>
+            <p class="precio">€ {precio}</p>
+        </div>
+
+        <form action="" class="formulario">
+            <label for="cantidad">Cantidad: </label>
+            <select name="" id="cantidad">
+                <option value="0">--Seleccione--</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+
+            <input type="submit" value="agregar al carrito">
+        </form>
     </main>
 </Layout>
+
+<style>
+    .guitarra {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    gap: 1rem;
+    align-items: center;
+    max-width: 70rem;
+    margin: 0 auto;
+}
+.contenido {
+    padding: 1rem;
+}
+.contenido h3 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: var(--primary);
+}
+.descripcion {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 6;
+    overflow: hidden;
+    font-size: 1.8rem;
+}
+.precio {
+    color: var(--primary);
+    font-size: 4rem;
+    margin: 0;
+    font-weight: 900;
+}
+.formulario {
+    margin-top: 4rem;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+}
+.formulario label {
+    font-size: 2.2rem;
+}
+.formulario select {
+    border: 1px solid var(--black);
+    padding: 1rem;
+    text-align: center;
+    border-radius: 1rem;
+}
+.formulario input[type="submit"] {
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    padding: 1.4rem;
+    border-radius: 16px;
+    background-color: var(--black);
+    color: var(--white);
+    transition-property: background-color;
+    transition-duration: 300ms;
+}
+.formulario input[type="submit"]:hover {
+    background-color: var(--primary);
+    cursor: pointer;
+    color: var(--black);
+}
+</style>
