Mostrar y estilizar posts

--- a/src/pages/guitarras/[id].astro
+++ b/src/pages/guitarras/[id].astro
@@ -95,8 +95,8 @@ const {nombre, imagen, descripcion, precio} = Astro.props.guitarra
 .formulario input[type="submit"] {
     display: block;
     width: 100%;
-    text-transform: uppercase;
-    font-weight: bold;
+    /* text-transform: uppercase; */
+    /* font-weight: bold; */
     border: none;
     padding: 1.4rem;
     border-radius: 16px;
