--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,30 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Post from '../components/Post.astro';
+
+const url = `${import.meta.env.PUBLIC_API_URL}/posts?populate=imagen`;
+const respuesta = await fetch(url);
+const {data} = await respuesta.json();
+
+// console.log(data)
 
 ---
 
 <Layout title="Blog" description='Pagina de instrumentos musicales'>
 	<main class="contenedor">
 		<h1 class="heading">Blog</h1>
+
+		<div class="grid">
+			{data?.map(post => (
+				<Post
+					titulo={post.attributes.titulo}
+					publishedAt={post.attributes.publishedAt}
+					contenido={post.attributes.contenido}
+					imagen={post.attributes.imagen.data.attributes.formats.medium.url}
+					url={post.attributes.url}
+				/>
+			))}
+		</div>
 	</main>
 </Layout>
 
