--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -62,8 +62,8 @@ console.log()
     text-decoration: none;
     font-size: 1.4rem;
     font-weight: 700;
-    text-transform: uppercase;
-    padding: .5rem;
+    /* text-transform: uppercase; */
+    padding: 0 1rem;
     transition: .3s ease-in-out all; 
     border-radius: 16px;
 }
