--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,13 +63,13 @@ console.log()
     font-size: 1.4rem;
     font-weight: 700;
     /* text-transform: uppercase; */
-    padding: 0 1rem;
+    padding: .5rem 1rem;
     transition: .3s ease-in-out all; 
     border-radius: 16px;
 }
 .navegacion a:hover,
 .active {
     background-color: var(--primary);
-    color: var(--black);
+    color: var(--black) !important;
 }
 </style>
