--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,58 @@
 ---
+import Guitarra from '../components/Guitarra.astro';
+import Post from '../components/Post.astro';
 import Layout from '../layouts/Layout.astro';
+
+const urlGuitarras = `${import.meta.env.PUBLIC_API_URL}/guitarras?populate=imagen`;
+const urlBlog = `${import.meta.env.PUBLIC_API_URL}/posts?populate=imagen`;
+
+const [resGuitarras, resBlog] = await Promise.all([
+	fetch(urlGuitarras),
+	fetch(urlBlog),
+
+])
+
+const [{data: guitarras}, {data: posts}] = await Promise.all([
+	resGuitarras.json(),
+	resBlog.json(),
+])
+
+// console.log(guitarras)
 
 ---
 
 <Layout title="Inicio" description='Pagina de instrumentos musicales'>
 	<main class="contenedor">
-		<h1 class="heading">Inicio</h1>
+		<h1 class="heading">Nuestra colección</h1>
+
+		<div class="grid">
+			{guitarras?.map(guitarra => (
+				<Guitarra
+					nombre={guitarra.attributes.nombre}
+					descripcion={guitarra.attributes.descripcion}
+					url={guitarra.attributes.url}
+					precio={guitarra.attributes.precio}
+					imagen={guitarra.attributes.imagen.data.attributes.formats.medium.url}
+				/>
+			))}
+		</div>
 	</main>
+
+	<section class="contenedor">
+		<h2 class="heading">Blog</h2>
+
+		<div class="grid">
+			{posts?.map(post => (
+				<Post
+					titulo={post.attributes.titulo}
+					publishedAt={post.attributes.publishedAt}
+					contenido={post.attributes.contenido}
+					imagen={post.attributes.imagen.data.attributes.formats.medium.url}
+					url={post.attributes.url}
+				/>
+			))}
+		</div>
+	</section>
 </Layout>
 
-<style>
-	
-</style>
+
