--- a/src/components/Guitarra.astro
+++ b/src/components/Guitarra.astro
@@ -64,9 +64,9 @@ const { nombre, descripcion, url, precio, imagen } = Astro.props;
     text-decoration: none;
     padding: 1rem;
     text-align: center;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-size: 1.4rem;
-    font-weight: 700;
+    
     transition-property: background-color;
     transition-duration: 300ms;
     border-radius: 16px;
@@ -75,6 +75,7 @@ const { nombre, descripcion, url, precio, imagen } = Astro.props;
 .enlace:hover {
     background-color: var(--primary);
     color: var(--black);
+    font-weight: 700;
 }
 
 .formulario {
