--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,25 @@
 ---
 import Guitarra from '../components/Guitarra.astro';
 import Post from '../components/Post.astro';
+import Curso from '../components/Curso.astro';
 import Layout from '../layouts/Layout.astro';
+
 
 const urlGuitarras = `${import.meta.env.PUBLIC_API_URL}/guitarras?populate=imagen`;
 const urlBlog = `${import.meta.env.PUBLIC_API_URL}/posts?populate=imagen`;
+const urlCurso = `${import.meta.env.PUBLIC_API_URL}/curso?populate=imagen`;
 
-const [resGuitarras, resBlog] = await Promise.all([
+const [resGuitarras, resBlog, resCurso] = await Promise.all([
 	fetch(urlGuitarras),
 	fetch(urlBlog),
+	fetch(urlCurso)
 
 ])
 
-const [{data: guitarras}, {data: posts}] = await Promise.all([
+const [{data: guitarras}, {data: posts}, {data:curso}] = await Promise.all([
 	resGuitarras.json(),
 	resBlog.json(),
+	resCurso.json()
 ])
 
 // console.log(guitarras)
@@ -37,6 +42,12 @@ const [{data: guitarras}, {data: posts}] = await Promise.all([
 			))}
 		</div>
 	</main>
+
+	<Curso
+		titulo={curso.attributes.titulo}
+		contenido={curso.attributes.contenido}
+		imagen={curso.attributes.imagen.data.attributes.url}
+	/>
 
 	<section class="contenedor">
 		<h2 class="heading">Blog</h2>
